# skill-bridge

./: .env.example  .gitignore  AGENTS.md  README.md  design_doc.md  pyproject.toml  requirements.txt
app/: gemini_client.py  graph.py  main.py  parsers.py  roadmap.py
app/static/: app.js  style.css
app/templates/: index.html
data/: curriculum.json  generate_pdfs.py
tests/: dummy_resume.txt  test_main.py
